Finished save mechanism
Everything seems to be coming along nicely

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id = "navigation">
 		<button onclick="clear()">Clear</button>
 		<button onclick="openFile()">Open File</button>
-		<button onclick="importPackage()">Import Package</button>
+		<button onclick="warnSave()">Import Package</button>
 		<button onclick="newPackage()">New Package</button>
 		<button onclick="save()">Save</button>
 		<button onclick="saveAs()">Save As</button>
